# hust-ba-gdp-life-expectancy-correlation

./: .gitignore  README.md  REQUIREMENTS.md  analyze_part1.py  main.py  pyproject.toml
output/: cleaned_dataset.csv
output/reports/: 1_cleaning_report.json  III1_comprehensive_analysis_results.json  III1_corr_by_country.csv  III1_correlation_matrix.csv  III1_descriptive_statistics.csv  III1_global_corr_summary.json  III1_regional_correlations.csv  III2_bottom_countries.csv  III2_top_countries.csv  III3_low_life_corr_matrix.csv  III3_low_life_factors.csv  III3_low_vs_high_feature_means.csv  III4_global_trends.csv  II_dataset_eval_stats.json  model_comparison_metrics.csv  model_comparison_metrics.json  model_randomforest_feature_importances.csv
